--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -13,8 +13,39 @@
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
 	</head>
+  
+  <style>
+    .box, html, body {
+        height: 100%;
+        padding-top:0;
+        padding-bottom:0;
+      }
+    
+    .box {
+      padding-top: 2em;
+      display: flex;
+      background: purple;
+      flex-wrap: wrap;
+      align-content: flex-start;
+      justify-content: space-evenly;
+    }
+    
+    .child {
+      background: orange;
+      height: 25%;
+      width: 18%;
+      margin-bottom: 3em;
+    }
+  </style>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="box">
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+    </div>
 	</body>
 </html>
