--- a/app/templates/e.html
+++ b/app/templates/e.html
@@ -13,8 +13,43 @@
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
 	</head>
+  
+  <style>
+    .box, html, body {
+        height: 100%;
+        padding-top:0;
+        padding-bottom:0;
+      }
+    .box {
+      padding-top:1em;
+      padding-bottom:1em;
+      display: flex;
+      flex-direction: column;
+      align-items:flex-start;
+      align-content:flex-start;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      background: purple;
+    }
+    
+    .child {
+      height: 30%;
+      width: 17%;
+      background:orange;
+      margin: 1em;
+    }
+  </style>
 	<body>
 		<!-- Your layout here -->
+    <div class="box">
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+    </div>
 
 	</body>
 </html>
