--- a/app/templates/f.html
+++ b/app/templates/f.html
@@ -12,9 +12,41 @@
 
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
+    
+    <style>
+      .box, html, body {
+        height: 100%;
+        padding-top:0;
+        padding-bottom:0;
+      }
+      
+      .box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-content: space-evenly;
+        align-items: stretch;
+        align-content: stretch;
+        background: purple;
+      }
+      .child {
+        background: orange;
+        height: 25%;
+      }
+    </style>
 	</head>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="box">
+      <div class="child">
+       
+      </div>
+      <div class="child">
+        
+      </div>
+      <div class="child">
+        
+      </div>
+    </div>
 	</body>
 </html>
