--- a/app/templates/h.html
+++ b/app/templates/h.html
@@ -12,9 +12,46 @@
 
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
+    
+    <style>
+      .box, html, body {
+        height: 100%;
+        padding-top:0;
+        padding-bottom:0;
+      }
+      
+      .box {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-around;
+        background: purple;
+      }
+      .child {
+        background: orange;
+        width: 17%;
+        height: 28%;
+      }
+    </style>
 	</head>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="box">
+      <div class="child"> </div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+      <div class="child"></div>
+    </div>
 	</body>
 </html>
